# amdgpu_stats

./: .readthedocs.yaml  README.md  amdgpu_stats.py  gpustats.py  pyproject.toml  requirements.txt  stats.css  todo.md
.forgejo/workflows/: pylint.yml
.github/workflows/: pylint.yml
docs/: conf.py  index.rst  reference.rst
docs/source/: conf.py
src/amdgpu_stats/: __init__.py  __main__.py  amdgpu_stats.py  interface.py  main.py  style.css  tui.py  utils.py
