[tool.poetry]
name = "amdgpu-stats"
version = "0.1.0"
description = "A simple TUI (using Textual) that shows AMD GPU statistics"
authors = ["Josh Lay <python@jlay.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textual = ">=0.10"
humanfriendly = ">=10.0"

[tool.poetry.scripts]
amdgpu-stats = "amdgpu_stats.amdgpu_stats:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
