[tool.poetry]
name = "amdgpu-stats"
version = "0.1.7"
description = "A simple module/TUI (using Textual) that provides AMD GPU statistics"
authors = ["Josh Lay <pypi@jlay.io>"]
repository = "https://github.com/joshlay/amdgpu_stats"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textual = ">=0.10"
humanfriendly = ">=10.0"
sphinx = "^5.3"

[tool.poetry.dev-dependencies]
sphinx-rtd-theme = "^1.1"

[tool.poetry.scripts]
amdgpu-stats = "amdgpu_stats.interface:tui"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
